syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Minsoo-Shin/protobuf_user";

service User {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

enum PhoneType {
  MOBILE = 0;
  HOME = 1;
  WORK = 2;
}

message PhoneNumber {
  string number = 1;
  PhoneType type = 2;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  repeated PhoneNumber phones = 4;
}

message CreateUserResponse {
  string name = 1;
  int64 id = 2;  // Unique ID number for this person.
  string email = 3;
  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp create_dt = 5;
}





